<resources>
    <string name="app_name">AllAvailable</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="submit">Submit</string>

    <string name="welcome">Welcome to AllAvailable!</string>
    <string name="first_hint">Let\'s reserve your study space</string>

    <string name="action_new_schedule">Create New Schedule</string>
    <string name="action_view_history">View History</string>
    <string name="action_call_admin">Call Administrator</string>
    <string name="next_hint">Your Next Reserve Room:</string>
    <string name="will_reserve_hint">You Will Reserve:</string>
    <string name="reserve_hint">You Have Reserved This Seat:</string>
    <string name="building_label">Buildings:</string>
    <string name="comment">comment</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="period">Period:</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reschedule">reschedule</string>

    <string name="post">Post</string>
    <string name="edit_post">Enter your comment here</string>
    <string name="new_photo">Take A New Photo</string>
    <string name="exist_photo">Choose From Gallery</string>
    <string name="done">Done</string>
    <string name="histories">Histories:</string>

    <string name="reschedule_dialog_message">To reschedule, this reservation will be removed?</string>
    <string name="dialog_title">Cancel this reservation</string>
    <string name="cancel_dialog_message">Do you really want to remove this reservation?</string>

    <!--<string name="host">http://172.29.93.237:8080/AllAvailableServer/</string>-->
    <string name="host">http://[2601:647:4001:c8c2:82e6:50ff:fe02:198e]:8080/AllAvailableServer/</string>

</resources>
