<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cmu.smartphone.allavailable.ui.ReserveActivity">

    <LinearLayout
        android:id="@+id/seat_map_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:background="@drawable/seat"
        android:layout_marginBottom="10dp"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/map_inner_linearlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<ImageView-->
                <!--android:id="@+id/imageView"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="200dp"-->
                <!--android:src="@drawable/seat" />-->

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_detail_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="@drawable/greenblackboard"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/detail_inner_linearlayout"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:text="@string/reserve_hint"
                android:textColor="#fffefe" />

            <TextView
                android:id="@+id/location_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="Carnegie Mellon University"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fffefe" />

            <TextView
                android:id="@+id/room_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="B19 1022"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fffefe" />

            <TextView
                android:id="@+id/seat_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="Seat 1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fffefe" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Monday, 11/21/2016, 10:00-15:00"
                android:id="@+id/time_selected"
                android:layout_gravity="center_horizontal"
                android:textColor="#fffefe"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/detail_reschedule_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorButton"
                android:ems="5"
                android:text="@string/reschedule"
                android:textColor="@color/colorText" />

            <Button
                android:id="@+id/detail_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/colorButton"
                android:ems="5"
                android:text="@string/cancel"
                android:textColor="@color/colorText" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


